--- a/css/style.css
+++ b/css/style.css
@@ -23,13 +23,14 @@ body {
     max-width: 900px;
     padding: 20px 30px;
     border-radius: 10px;
-    background-color: rgba(255,255,255,0.4 );
-    box-shadow: 0 10px 10px 10px rgba(0,0,0,0.2);
+    background-color: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 10px 10px 10px rgba(0, 0, 0, 0.2);
 }
 
 .quote-text {
     font-size: 2.75rem;
 }
+
 .long-quote {
     font-size: 2rem;
 }
@@ -64,28 +65,58 @@ button {
     box-shadow: 0 0.3rem rgba(121, 121, 121, 0.65);
 }
 
- button:hover {
-     filter:brightness(110%);
- }
+button:hover {
+    filter: brightness(110%);
+}
 
- button:focus{
-   outline:0px;
- }
- 
+button:focus {
+    outline: 0px;
+}
 
- button:active {
-     transform: translate(0,0.3rem);
-     box-shadow: 0 0.1rem rgba(255,255,255,0.65);
- }
 
- .twitter-button:hover{
-   color:#38a1f3;
- }
- 
- .fa-twitter{
-   font-size:1.5rem;
- }
- 
+button:active {
+    transform: translate(0, 0.3rem);
+    box-shadow: 0 0.1rem rgba(255, 255, 255, 0.65);
+}
+
+.twitter-button:hover {
+    color: #38a1f3;
+}
+
+.fa-twitter {
+    font-size: 1.5rem;
+}
+
+/* Loader */
+.loader {
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #333;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+}
+
+/* Safari */
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 
 /* Media Query: Tablet or Smaller*/
 
